[gd_scene load_steps=3 format=3 uid="uid://forde2ohwon1"]

[ext_resource type="Script" path="res://Functionality/Scripts/ray_of_annihilation.gd" id="1_iwt8t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ypgxf"]
size = Vector2(700, 30)

[node name="ray_of_annihilation" type="Area2D"]
script = ExtResource("1_iwt8t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(350, 15)
shape = SubResource("RectangleShape2D_ypgxf")

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.607843)
offset_right = 700.0
offset_bottom = 30.0
color = Color(0.239216, 0.564706, 0.564706, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
